Add overridden config test cases

--- a/spec/fixtures/_layouts/post.html
+++ b/spec/fixtures/_layouts/post.html
@@ -3,3 +3,4 @@ layout: default
 ---
 <div class="tags">{{ page.tags | join: ',' }}</div>
 <div class="categories">{{ page.categories | join: ',' }}</div>
+<div class="asset-image-url">{{ page.item.elements.asset.value[0].url }}</div>
